--- a/client/src/app/components/footer/footer.component.html
+++ b/client/src/app/components/footer/footer.component.html
@@ -1,8 +1,7 @@
-<footer class="footer bg-dark">
+<footer class="footer " style="background-color: #000001">
     <div class="container">
-        <p class="text-white text-center">
-            &copy; 2019 BioPlant - WaterMass+
-
+        <p class="text-center" style="margin:0; padding-top: 15px; padding-bottom: 15px; color: #888888">
+            <a >&copy; 2019 BioPlant - WATERMAS</a>
         </p>
     </div>
 </footer>
