--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -1,37 +1,34 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #000000">
-  <a class="navbar-brand" href="#" ><span style="color:green;">Bio</span>Plant </a>
+<nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #000001">
+  <a class="navbar-brand" href="#" ><span style="color:green; font-weight: 700">Bio</span>Plant </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item ">
         <a class="nav-link" href="#">Start</a>
       </li>
-      <!--li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li-->
       <li class="nav-item">
         <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">Tutorials</a>
       </li>
+
     </ul>
+      <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+          Log in
+        </a>
+      </li>
+      </ul>
+
     <!--form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form-->
-      <h1>jhj</h1>
   </div>
 </nav>
 
