--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -2,4 +2,77 @@
   position: absolute;
   bottom: 0px;
   width: 100%;
+
+}
+
+/*body{
+  background-color: black;
+  color: white !important;
+}*/
+
+/*hr{
+  border-color: white;
+}*/
+
+/*.jumbotron{
+  background-color: #171717;
+}*/
+
+.puntero{
+  cursor: pointer;
+}
+
+.carousel-item{
+  width: 100%;
+  height: 650px;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  opacity: 0.50;
+}
+
+@media (max-width: 600px) {
+  .carousel-item {
+    height: 280px;
+  }
+}
+
+
+.main-container{
+  margin-top: 30px;
+}
+
+.img-circle{
+  border-radius: 100%;
+}
+
+
+/* Animaciones */
+.animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+.fast {
+  -webkit-animation-duration: 0.4s;
+  animation-duration: 0.4s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.fadeIn {
+  animation-name: fadeIn;
 }
