--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -6,14 +6,14 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item" routerLinkActive = "active">
+        <a class="nav-link" [routerLink] = "['home']">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item ">
-        <a class="nav-link" href="#">Start</a>
+      <li class="nav-item " routerLinkActive = "active">
+        <a class="nav-link" [routerLink] = "['starting']">Start</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">Tutorials</a>
+      <li class="nav-item" routerLinkActive = "active">
+        <a class="nav-link " [routerLink] = "['tutorial']">Tutorials</a>
       </li>
 
     </ul>
