--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -29,7 +29,7 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  opacity: 0.50;
+  opacity: 0.50 !important;
 }
 
 @media (max-width: 600px) {
@@ -65,7 +65,7 @@
 
 @keyframes fadeIn {
   from {
-    opacity: 0;
+    opacity: 0.5;
   }
 
   to {
@@ -76,3 +76,5 @@
 .fadeIn {
   animation-name: fadeIn;
 }
+
+
